--- a/style.css
+++ b/style.css
@@ -46,10 +46,22 @@ nav
 banner
 **********************/
 #banner {
-    background-image: url(img/banner.jpg);
+    background-image: linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.99)), url(img/banner.jpg);
     height: 80vh;
     background-position: center;
     background-size: cover;
+    position: relative;
+}
+#banner::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: var(--black);
+    transform: skewY(10deg);
+    transform-origin: left bottom;
+    bottom: 0;
+    z-index: -1;
 }
 #banner .row {
     height: 80vh;
@@ -72,5 +84,24 @@ banner
 .bannerBtn:hover {
     text-decoration: none;
     background-color: var(--orange);
+    color: var(--black);
+}
+/**********************
+bannerIcons
+**********************/
+.bannerIcons {
+    margin-top: -100px;
+}
+.bannerIcons ul li {
+    background-color: var(--orange);
+    margin: 0 10px;
+    padding: 10px;
+    color: var(--bela);
+}
+.bannerIcons i {
+    font-size: 50px;
+    transition: var(--transition);
+}
+.bannerIcons i:hover {
     color: var(--black);
 }
