--- a/style.css
+++ b/style.css
@@ -141,3 +141,45 @@ services
 #services .fa-js {
     clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
 }
+/**********************
+contact
+**********************/
+#contact {
+    background-image: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url(img/contact.jpg);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 70vh;
+    clip-path: polygon(0 20%, 100% 0%, 100% 80%, 0% 100%);
+}
+#contact .row {
+    height: 50vh;
+}
+#contact h2 {
+    color: var(--bela);
+    font-size: 5em;
+    text-transform: uppercase;
+}
+#contact input {
+    background-color: transparent;
+    border: none;
+    border-bottom: 3px solid var(--bela);
+    border-radius: 0;
+    font-size: 2.3em;
+}
+#contact button{
+    text-decoration: none;
+    font-size: 2em;
+    padding: 10px 30px;
+    border: 2px solid var(--orange);
+    background-color: transparent;
+    text-transform: uppercase;
+    color: var(--orange);
+    margin-left: 30px;
+    transition: var(--transition);
+}
+#contact button:hover {
+    text-decoration: none;
+    background-color: var(--orange);
+    color: var(--black);
+}
