--- a/style.css
+++ b/style.css
@@ -183,3 +183,13 @@ contact
     background-color: var(--orange);
     color: var(--black);
 }
+/**********************
+team
+**********************/
+.carousel-caption {
+    background-color: var(--orange);
+    bottom: 80px;
+}
+#team .row {
+    clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 90%);
+}
